--- a/DesafioCrudMvcComeia/Web.config
+++ b/DesafioCrudMvcComeia/Web.config
@@ -56,10 +56,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="DbModels" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MVCCrudComeia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+	<connectionStrings>
+		<add name="DbModels" connectionString="Data Source=DESKTOP-KCLOGL1;Initial Catalog=MVCCrudComeia;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <entityFramework>
+	  <contexts>
+		  <context type="DesafioCrudMvcComeia.Models.DbModels, DesafioCrudMvcComeia">
+		  </context>
+	  </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
