--- a/DesafioCrudMvcComeia/packages.config
+++ b/DesafioCrudMvcComeia/packages.config
@@ -3,6 +3,12 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework.Commands" version="7.0.0-rc1-final" targetFramework="net472" />
+  <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net472" />
+  <package id="EntityFramework.MicrosoftSqlServer" version="7.0.0-rc1-final" targetFramework="net472" />
+  <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net472" />
+  <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net472" />
+  <package id="Ix-Async" version="1.2.5" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
@@ -18,9 +24,26 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc1-final" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Remotion.Linq" version="2.0.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0-beta-23516" targetFramework="net472" />
+  <package id="System.Diagnostics.Tracing" version="4.0.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net472" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
